@@ -1,16 +1,65 @@
-org.gradle.parallel=true
-org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m
-android.enableR8=true
 buildscript {
+    // إصدارات Kotlin
     ext.kotlin_version = '1.9.22'
+    ext.compose_version = '1.6.3'
+
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
+
     dependencies {
+        // إصدار Gradle Plugin (يجب أن يتوافق مع إصدار Android Studio)
         classpath 'com.android.tools.build:gradle:8.2.2'
+        
+        // Kotlin Plugin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.4.0'  // إذا كنت تستخدم Firebase
+        
+        // Firebase (إذا كنت تستخدم خدمات Firebase)
+        classpath 'com.google.gms:google-services:4.4.0'
+        
+        // Crashlytics
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+        
+        // أدوات تحليل الأداء
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+// تنظيف مشاريع Gradle
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
+}
+
+// إعدادات عامة لجميع الوحدات
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            android {
+                compileSdkVersion 34
+                defaultConfig {
+                    minSdkVersion 23
+                    targetSdkVersion 34
+                    versionCode 1
+                    versionName "1.0.0"
+                }
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_17
+                    targetCompatibility JavaVersion.VERSION_17
+                }
+                kotlinOptions {
+                    jvmTarget = '17'
+                }
+            }
+        }
     }
 }
